adjusted inline width and height, and ensured the appropriate size was set in css to prevent culative shifts

--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,11 @@ main {
   padding: 1em;
 }
 
-.newsletter-img img,
+.newsletter-img img {
+  width: min(120px, 6.25vw);
+  height: min(120px, 11.11vh);
+}
+
 .cta-section img {
   width: 22vw;
   height: auto;
@@ -569,6 +573,14 @@ main {
   letter-spacing: .5px;
 }
 
+.article-grid1 img {
+  width: 100%;
+  aspect-ratio: 16/9;
+  height: auto;
+  object-fit: cover;
+  border-radius: 1.5em;
+  box-shadow: rgb(0 0 0 / 20%) 0px 0px 1.5625em 0.5em;
+  }
 .cat-btn {
   display: flex;
   flex-wrap: wrap;
@@ -638,12 +650,11 @@ main {
 }
 
 .article3 img,
-.article-grid1 img,
 .article2 img {
-  max-width: 100%;
+  max-width: 26.04vw;
+  height: 27.78vh;
   border-radius: 1.5em;
   box-shadow: rgb(0 0 0 / 20%) 0px 0px 0.1875em 0.1875em; 
-  height: 25vh;
   object-fit: cover;
   object-position: bottom center;
 }
